[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juno-agent-harness"
version = "0.1.0"
description = "A lightweight Hermes-inspired terminal agent harness with memory, sessions, provider switching, and the Juno CLI UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "sysangel" }]
dependencies = [
  "langgraph>=1.0,<2",
  "langchain>=1,<2",
  "langchain-openai>=1,<2",
  "langchain-aws>=1,<2",
  "openai>=2,<3",
  "python-dotenv>=1,<2",
  "prompt_toolkit>=3,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
juno = "juno_agent_harness.cli:main"

[tool.setuptools]
packages = ["juno_agent_harness"]
py-modules = [
  "agent_loop",
  "chat",
  "harness",
  "headtohead",
  "kimi_chat",
  "orchestrator",
  "probe_candidates",
  "probe_gen",
  "probe_matrix",
  "probe_reason",
  "probe_tests",
  "swarm",
  "verify_provider",
]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".venv",
  "venv",
  "env",
  "build",
  "dist",
  "runs",
  "headtohead_out",
  "agent_workspace",
]
addopts = ["--import-mode=importlib"]
